--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
-hello world
+
+<html>
+<header><title>Josefa M. Sullivan</title></header>
+  <head>
+    <title>Josefa M. Sullivan</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Google Analytics -->
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+  </head>
+<body>
+
+<row>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Josefa M. Sullivan</a>
+        </div>
+        <ul class="nav navbar-nav">
+
+	  <li>
+            <a href="https://scholar.google.com/citations?user=VB7l7QgAAAAJ&hl=en"><span class="icon-large icon-github"></span>Google Scholar</a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/josefa-sullivan/"><span class="icon-large icon-github"></span>LinkedIn</a>
+          </li>
+          <li>
+            <a href="https://github.com/Josefa-Sullivan"><span class="icon-large icon-github"></span>Github</a>
+          </li>
+          <li>
+            <a href=""><span class="icon-large icon-github"></span>CV</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    </row>
+
+        <br>
+    <br>
+    <br>
+
+<font size="3.0pt">
+<!-- <center>
+<img src="Zefa_headshot_2021.jpg", width="180">
+</center>
+<br><br> -->
+
+
+  <div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <div class="well well-sm" style="margin-top: 10px;">
+
+	<img src="jakevarley.jpg", width="180">
+	
+	<br>
+      <br>
+I am a Senior Scientist at <a href="https://meiragtx.com/">MeiraGTx</a>, a gene therapy company located in New York, NY. 
+
+      <br><br>
+      
+
+
+      <div class="col-md-2"></div>
+  </div>
+
+</font>
+</body>
+</html>
