--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
           <li>
             <a href="https://github.com/Josefa-Sullivan"><span class="icon-large icon-github"></span>Github</a>
           </li>
-          <li>
-            <a href=""><span class="icon-large icon-github"></span>CV</a>
-          </li>
         </ul>
       </div>
     </nav>
@@ -55,9 +52,9 @@
   <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-8">
-      <div class="well well-sm" style="margin-top: 10px;">
+      <div class="well well-sm" style="margin-top: 20px;">
 
-	<img src="jakevarley.jpg", width="180">
+	<img src="Zefa_headshot_2021.jpg", width="180">
 	
 	<br>
       <br>
