--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
 	<br>
       <br>
 I am a Senior Scientist at <a href="https://meiragtx.com/">MeiraGTx</a>, a gene therapy company located in New York, NY. 
-
+	<br>
+In 2020, I completed my PhD in Neuroscience in the <a href="http://labs.neuroscience.mssm.edu/project/schaefer-lab/">Schaefer Laboratory</a> at Mount Sinai School of Medicine. 
+	<br>
+Prior to graduate school, I earned a B.A. in Biochemistry & Molecular Biology at Boston University where I worked with <a href="https://www.bu.edu/biology/people/profiles/angela-ho/">Dr. Angela Ho</a>.
       <br><br>
       
 
