--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
           <a class="navbar-brand" href="#">Josefa M. Sullivan</a>
         </div>
         <ul class="nav navbar-nav">
-
+	 <li>
+            <a href="JMSullivan_thesis.pdf"></span>Thesis Work</a>
+          </li>
 	  <li>
             <a href="https://scholar.google.com/citations?user=VB7l7QgAAAAJ&hl=en"><span class="icon-large icon-github"></span>Google Scholar</a>
           </li>
