Added research highlight from Thesis and contact info

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Josefa M. Sullivan</a>
+          <a class="navbar-brand" href="#">Josefa (Zefa) Sullivan</a>
         </div>
         <ul class="nav navbar-nav">
 	 <li>
@@ -45,10 +45,7 @@
     <br>
 
 <font size="3.0pt">
-<!-- <center>
-<img src="Zefa_headshot_2021.jpg", width="180">
-</center>
-<br><br> -->
+
 
 
   <div class="row">
@@ -60,13 +57,21 @@
 	
 	<br>
       <br>
-I am a Senior Scientist at <a href="https://meiragtx.com/">MeiraGTx</a>, a gene therapy company located in New York, NY. 
-	<br>
-In 2020, I completed my PhD in Neuroscience in the <a href="http://labs.neuroscience.mssm.edu/project/schaefer-lab/">Schaefer Laboratory</a> at Mount Sinai School of Medicine. 
-	<br>
+I'm interested in the cellular and molecular processes that lead to neurodegeneration with the goal of finding cures for these devastating diseases.
+
+Currently, I am a Senior Scientist at <a href="https://meiragtx.com/">MeiraGTx</a>, a gene therapy company located in New York, NY. 
+In 2020, I completed my PhD in Neuroscience  at Mount Sinai School of Medicine. 
 Prior to graduate school, I earned a B.A. in Biochemistry & Molecular Biology at Boston University where I worked with <a href="https://www.bu.edu/biology/people/profiles/angela-ho/">Dr. Angela Ho</a>.
       <br><br>
-      
+<b>Newly Published Work!</b>
+<br>
+ In my <a href="https://josefa-sullivan.github.io/JMSullivan_thesis.pdf">thesis work</a>, I discovered that inhibiting epigenetic proteins, the BETs, caused a metabolic shift in neurons that increased neuronal lifespan (A) and resilience to toxic stimuli (B). Furthermore, I showed that BETs transcriptionally regulate inflammatory gene networks in microglia which have been linked to the pathology of various neurodegenerative diseases. Often discoveries in isolated cells are not always observed in living organisms, but I found that inhibiting these processes in an Alzheimer's mouse model rescued a broad range of phenotypes (C, D). If you want to learn more, please check out my thesis or send me an note on <a href="https://www.linkedin.com/in/josefa-sullivan/">LinkedIn</a> or <a href="https://twitter.com/zefasullivan">Twitter</a> (@ZefaSullivan).
+     <br>
+	<br>
+<center>
+ <img src="JMThesis_blurb.jpg", width="950">
+</center>
+
 
 
       <div class="col-md-2"></div>
